# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("cjc.gni")
import("multi-product_diff.gni")

cangjie_systemapi = "//vendor/huawei/arkcompiler/cangjie_api"
cangjie_systemapi_api = "${cangjie_systemapi}/api"

cangjie_systemapi_libs = [
  {
    label =
        "${cangjie_systemapi_api}/ability_access_ctrl:ohos.ability_access_ctrl"
    lib_name = "ability_access_ctrl"
  },
  {
    label = "${cangjie_systemapi_api}/battery_info:ohos.battery_info"
    lib_name = "battery_info"
  },
  {
    label = "${cangjie_systemapi_api}/bluetooth:ohos.bluetooth"
    lib_name = "bluetooth"
  },
  {
    label = "${cangjie_systemapi_api}/bluetooth:ohos.bluetooth.baseProfile"
    lib_name = "bluetooth.baseProfile"
  },
  {
    label = "${cangjie_systemapi_api}/bluetooth:ohos.bluetooth.ble"
    lib_name = "bluetooth.ble"
  },
  {
    label = "${cangjie_systemapi_api}/bluetooth:ohos.bluetooth.connection"
    lib_name = "bluetooth.connection"
  },
  {
    label = "${cangjie_systemapi_api}/bluetooth:ohos.bluetooth.constant"
    lib_name = "bluetooth.constant"
  },
  {
    label = "${cangjie_systemapi_api}/bundle_manager:ohos.bundle_manager"
    lib_name = "bundle_manager"
  },
  {
    label = "${cangjie_systemapi_api}/calendar_manager:ohos.calendar_manager"
    lib_name = "calendar_manager"
  },
  {
    label = "${cangjie_systemapi_api}/common_event_manager:ohos.common_event_manager"
    lib_name = "common_event_manager"
  },
  {
    label = "${cangjie_systemapi_api}/contacts:ohos.contact"
    lib_name = "contact"
  },
  {
    label = "${cangjie_systemapi_api}/crypto:ohos.crypto"
    lib_name = "crypto"
  },
  {
    label = "${cangjie_systemapi_api}/data_share_predicates:ohos.data_share_predicates"
    lib_name = "data_share_predicates"
  },
  {
    label = "${cangjie_systemapi_api}/device_info:ohos.device_info"
    lib_name = "device_info"
  },
  {
    label = "${cangjie_systemapi_api}/display_runtime:ohos.display"
    lib_name = "display"
  },
  {
    label = "${cangjie_systemapi_api}/distributed_kv_store:ohos.distributed_kv_store"
    lib_name = "distributed_kv_store"
  },
  {
    label = "${cangjie_systemapi_api}/eventhub:ohos.eventhub"
    lib_name = "eventhub"
  },
  {
    label = "${cangjie_systemapi_api}/file_fileuri:ohos.file_fileuri"
    lib_name = "file_fileuri"
  },
  {
    label = "${cangjie_systemapi_api}/file_fs:ohos.file_fs"
    lib_name = "file_fs"
  },
  {
    label = "${cangjie_systemapi_api}/geo_location_manager:ohos.geo_location_manager"
    lib_name = "geo_location_manager"
  },
  {
    label = "${cangjie_systemapi_api}/hiappevent:ohos.hiappevent"
    lib_name = "hiappevent"
  },
  {
    label = "${cangjie_systemapi_api}/hilog:ohos.hilog"
    lib_name = "hilog"
  },
  {
    label = "${cangjie_systemapi_api}/hi_tracemeter:ohos.hi_tracemeter"
    lib_name = "hi_tracemeter"
  },
  {
    label = "${cangjie_systemapi_api}/i18n:ohos.i18n"
    lib_name = "i18n"
  },
  {
    label = "${cangjie_systemapi_api}/image:ohos.image"
    lib_name = "image"
  },
  {
    label = "${cangjie_systemapi_api}/multimedia/camera:ohos.multimedia.camera"
    lib_name = "multimedia.camera"
  },
  {
    label = "${cangjie_systemapi_api}/multimedia/media_library:ohos.multimedia.photo_accesshelper"
    lib_name = "multimedia.photo_accesshelper"
  },
  {
    label = "${cangjie_systemapi_api}/multimedia_media:ohos.multimedia_media"
    lib_name = "multimedia_media"
  },
  {
    label = "${cangjie_systemapi_api}/net/connection:ohos.net.connection"
    lib_name = "net.connection"
  },
  {
    label = "${cangjie_systemapi_api}/net/http:ohos.net.http"
    lib_name = "net.http"
  },
  {
    label = "${cangjie_systemapi_api}/preferences:ohos.preferences"
    lib_name = "preferences"
  },
  {
    label = "${cangjie_systemapi_api}/relational_store:ohos.relational_store"
    lib_name = "relational_store"
  },
  {
    label = "${cangjie_systemapi_api}/request:ohos.request.agent"
    lib_name = "request.agent"
  },
  {
    label = "${cangjie_systemapi_api}/resource_manager:ohos.resource_manager"
    lib_name = "resource_manager"
  },
  {
    label = "${cangjie_systemapi_api}/rpc:ohos.rpc"
    lib_name = "rpc"
  },
  {
    label = "${cangjie_systemapi_api}/security_huks:ohos.security_huks"
    lib_name = "security_huks"
  },
  {
    label = "${cangjie_systemapi_api}/sensor:ohos.sensor"
    lib_name = "sensor"
  },
  {
    label = "${cangjie_systemapi_api}/settings:ohos.settings"
    lib_name = "settings"
  },
  {
    label = "${cangjie_systemapi_api}/system_date_time:ohos.system_date_time"
    lib_name = "system_date_time"
  },
  {
    label = "${cangjie_systemapi_api}/system_parameter_enhance:ohos.system_parameter_enhance"
    lib_name = "system_parameter_enhance"
  },
  {
    label =
        "${cangjie_systemapi_api}/telephony/telephony_call:ohos.telephony_call"
    lib_name = "telephony_call"
  },
  {
    label = "${cangjie_systemapi_api}/values_bucket:ohos.values_bucket"
    lib_name = "values_bucket"
  },
  {
    label = "${cangjie_systemapi_api}/webview:ohos.webview"
    lib_name = "webview"
  },
  {
    label = "${cangjie_systemapi_api}/wifi_manager:ohos.wifi_manager"
    lib_name = "wifi_manager"
  },
]

cangjie_kits = [
  {
    label = "${cangjie_systemapi}/kit:kit.AbilityKit"
    lib_name = "AbilityKit"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.ArkData"
    lib_name = "ArkData"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.ArkGraphics2D"
    lib_name = "ArkGraphics2D"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.ArkUI"
    lib_name = "ArkUI"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.ArkWeb"
    lib_name = "ArkWeb"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.BasicServicesKit"
    lib_name = "BasicServicesKit"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.CalendarKit"
    lib_name = "CalendarKit"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.CameraKit"
    lib_name = "CameraKit"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.ConnectivityKit"
    lib_name = "ConnectivityKit"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.ContactsKit"
    lib_name = "ContactsKit"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.CoreFileKit"
    lib_name = "CoreFileKit"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.CryptoArchitectureKit"
    lib_name = "CryptoArchitectureKit"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.ImageKit"
    lib_name = "ImageKit"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.IPCKit"
    lib_name = "IPCKit"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.LocalizationKit"
    lib_name = "LocalizationKit"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.LocationKit"
    lib_name = "LocationKit"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.MediaKit"
    lib_name = "MediaKit"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.MediaLibraryKit"
    lib_name = "MediaLibraryKit"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.NetworkKit"
    lib_name = "NetworkKit"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.PerformanceAnalysisKit"
    lib_name = "PerformanceAnalysisKit"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.SensorServiceKit"
    lib_name = "SensorServiceKit"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.TelephonyKit"
    lib_name = "TelephonyKit"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.UIKit"
    lib_name = "UIKit"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.UniversalKeystoreKit"
    lib_name = "UniversalKeystoreKit"
  },
]

cangjie_hybird_libs = [
  {
    label = "${cangjie_systemapi_api}/arkui/cj_ndk:ohos.hybrid_base"
    lib_name = "hybrid_base"
  },
]

cangjie_ui_libs = [
  # napi
  {
    label = "${cangjie_systemapi_api}/interop:ohos.ark_interop"
    lib_name = "ark_interop"
  },
  {
    label = "${cangjie_systemapi_api}/interop:ohos.ark_interop_helper"
    lib_name = "ark_interop_helper"
  },

  # window manager
  {
    label = "${cangjie_systemapi_api}/window:ohos.window"
    lib_name = "window"
  },

  # ability
  {
    label = "${cangjie_systemapi_api}/ability:ohos.ability"
    lib_name = "ability"
  },

  # components
  {
    label = "${cangjie_systemapi_api}/arkui/cj:ohos.base"
    lib_name = "base"
  },
  {
    label = "${cangjie_systemapi_api}/arkui/cj:ohos.component"
    lib_name = "component"
  },
  {
    label = "${cangjie_systemapi_api}/arkui/cj:ohos.router"
    lib_name = "router"
  },
  {
    label = "${cangjie_systemapi_api}/arkui/cj:ohos.state_manage"
    lib_name = "state_manage"
  },
  {
    label = "${cangjie_systemapi_api}/arkui/cj:ohos.animator"
    lib_name = "animator"
  },
  {
    label = "${cangjie_systemapi_api}/arkui/cj:ohos.curves"
    lib_name = "curves"
  },
  {
    label = "${cangjie_systemapi_api}/arkui/cj:ohos.prompt_action"
    lib_name = "prompt_action"
  },
  {
    label = "${cangjie_systemapi_api}/arkui/cj:ohos.font"
    lib_name = "font"
  },
  {
    label = "${cangjie_systemapi_api}/arkui/cj:ohos.matrix4"
    lib_name = "matrix4"
  },
  {
    label = "${cangjie_systemapi_api}/arkui/cj:ohos.concurrency"
    lib_name = "concurrency"
  },
  {
    label = "${cangjie_systemapi_api}/arkui/cj:ohos.measure"
    lib_name = "measure"
  },
  {
    label = "${cangjie_systemapi_api}/arkui/cj:ohos"
    lib_name = "ohos"
  },
  {
    label = "${cangjie_systemapi_api}/arkui/cj:ohos.ui_resource"
    lib_name = "ui_resource"
  },
  {
    label = "${cangjie_systemapi_api}/arkui/cj_ndk:ohos.hybrid_base"
    lib_name = "hybrid_base"
  },
  {
    label = "${cangjie_systemapi_api}/arkui/cj:ohos.component_utils"
    lib_name = "component_utils"
  },
  {
    label = "${cangjie_systemapi_api}/arkui/cj:ohos.component_snapshot"
    lib_name = "component_snapshot"
  },
]

cangjie_macro_libs = [
  {
    label = "${cangjie_systemapi_api}/arkui/cj:state_macro_manage"
    lib_name = "state_macro_manage"
  },
  {
    label = "${cangjie_systemapi_api}/interop:ark_interop_macro"
    lib_name = "ark_interop_macro"
  },
]

cangjie_ohos_libs = cangjie_systemapi_libs
cangjie_ohos_libs += cangjie_hybird_libs
cangjie_ohos_libs += cangjie_ui_libs
